--- a/src/components/TaskForm/TaskForm.css
+++ b/src/components/TaskForm/TaskForm.css
@@ -47,3 +47,23 @@ label {
     color: #ff8a5c;
     border: 0.1em solid
     }
+
+@media screen and (min-width: 500px) {
+        .task-form {
+            margin-left: 14em;
+            margin-right: 14rem;
+            }
+        .task-form-page {
+            margin-top: 10em;
+            }
+        }
+
+@media screen and (min-width: 800px) {
+        .task-form {
+            margin-left: 38em;
+            margin-right: 38em;
+            }
+        .task-form-page {
+            margin-top: 10em;
+        }
+        }
