--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -32,3 +32,22 @@
     background-color:#fcf9ea;
     color: #ff8a5c;
     }
+
+@media screen and (min-width: 500px) {
+.registration-form {
+    margin-right: 7em;
+    margin-left: 7em;
+    padding-top: 3em;
+    padding-bottom: 3em;
+    }
+    
+    }
+
+@media screen and (min-width: 800px) {
+    .registration-form {
+        margin-right: 35em;
+        margin-left: 35em;
+        padding-top: 3em;
+        padding-bottom: 3em;
+        }
+}
