--- a/src/components/TaskListItem/TaskListItem.css
+++ b/src/components/TaskListItem/TaskListItem.css
@@ -26,15 +26,12 @@
 
 
 @media screen and (min-width: 500px) {
-    .task-item {
-        margin-right: 10rem;
-        margin-left: 10rem;
-    }
+
 }
 
 @media screen and (min-width: 800px) {
-    .task-item {
-        margin-right: 32rem;
-        margin-left: 32rem;
+    .task-form-page {
+        margin-left: -4rem;
+        margin-right: -3rem;
     }
 }
