--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -44,16 +44,16 @@
     background-color:#ff8a5c;
     text-align:center;
     transition: all 0.2s;
-    }
+}
 
 .login-button:hover{
     background-color:#fcf9ea;
     color: #ff8a5c;
-    }
+}
 
 .sub-header {
         font-family: 'Indie Flower', cursive;
-    }
+}
 
 .front-input {
     border-radius: 25px;
@@ -63,21 +63,21 @@
     height: 6px;    
 }
 
-@media screen and (min-width: 500px) {
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
     .login-form {
-    margin-right: 7em;
-    margin-left: 7em;
-    padding-top: 3em;
-    padding-bottom: 3em;
-    }
-
-}
-
-@media screen and (min-width: 800px) {
-    .login-form {
-        margin-right: 35em;
-        margin-left: 35em;
+        margin-right: 7em;
+        margin-left: 7em;
         padding-top: 3em;
         padding-bottom: 3em;
-        }
+    }
+}
+
+/*  Large devices (desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    .login-form {
+        margin: 0 30rem;
+        padding-top: 3em;
+        padding-bottom: 3em;
+    }
 }
