--- a/src/components/TaskForm/TaskForm.css
+++ b/src/components/TaskForm/TaskForm.css
@@ -16,6 +16,10 @@
     margin-right: 1rem;
 }
 
+.task-form label {
+    width: 100%;
+}
+
 #task-image {
     margin-bottom: 1rem;
 }
@@ -49,20 +53,16 @@ label {
     }
 
 @media screen and (min-width: 500px) {
-        .task-form {
-            margin-left: 14em;
-            margin-right: 14rem;
-            }
-        .task-form-page {
-            margin-top: 10em;
-            }
-        }
+    .task-form {
+    }
+    .task-form-page {
+        margin-top: 10em;
+    }
+}
 
 @media screen and (min-width: 800px) {
         .task-form {
-            margin-left: 38em;
-            margin-right: 38em;
-            }
+        }
         .task-form-page {
             margin-top: 10em;
         }
