--- a/src/components/TaskListPage/TaskListPage.css
+++ b/src/components/TaskListPage/TaskListPage.css
@@ -1,3 +1,37 @@
 .task-list-page {
     margin-top: 7rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+    .task-list-page {
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .task-list-page {
+        margin-left: 7rem;
+        margin-right: 7rem;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+    .task-list-page {
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    .task-list-page {
+        margin-left: 20rem;
+        margin-right: 20rem;
+    }
 }
