--- a/src/components/TaskListItem/TaskListItem.css
+++ b/src/components/TaskListItem/TaskListItem.css
@@ -24,11 +24,7 @@
     color:#fcf9ea;
 }
 
-
-@media screen and (min-width: 500px) {
-
-}
-
+/* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 800px) {
     .task-form-page {
         margin-left: -4rem;
@@ -37,6 +33,7 @@
 
 }
 
+/*  Large devices (desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     .task-image {
         max-height: 14rem;
@@ -44,7 +41,7 @@
 }
 
 
-
+/* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
     .task-image {
         max-height: 14rem;
