--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,35 +1,36 @@
-.landing-page {
+/* .landing-page {
     margin-top: 2rem;
     margin: 5rem 5rem;
-}
-
-.landing-page-header {
-    font-family: 'Indie Flower', cursive;
-    font-size: 3rem;
-    background-color: #ff8a5c;
-    padding: 15px;
-}
-
-.description {
-    line-height: 2rem;
-    background-color: #badfdb;
-    margin-right: 2rem;
-    margin-left: 2rem;
-    padding: 1rem;
-    margin-bottom: 2rem;
-    font-family: 'Acme', sans-serif;
-    font-size: 25px;
-}
-
-.slogan {
-    font-family: 'Indie Flower', cursive;
-    font-size: 3rem;
-}
+} */
 
 .link-to-app {
     font-family: 'Acme', sans-serif;
 }
+/* 
+body {
+    width: 100%;
+} */
 
-.children-play {
-    max-width: 335;
+.img-container {
+    background-image: url(../../img/tallyho-banner.jpeg); /* The image used - important! */
+    background-size: cover;
+    position: relative; /* Needed to position the cutout text in the middle of the image */
+    height: 35rem; /* Some height */
+}
+
+
+.banner-title {
+    background-color: white;
+    color: black;
+    font-size: 10vw; /* Responsive font size */
+    font-weight: bold;
+    margin: 0 auto; /* Center the text container */
+    padding: 10px;
+    width: 40%;
+    text-align: center; /* Center text */
+    position: absolute; /* Position text */
+    top: 50%; /* Position text in the middle */
+    left: 50%; /* Position text in the middle */
+    transform: translate(-50%, -50%); /* Position text in the middle */
+    mix-blend-mode: screen; /* This makes the cutout text possible */
 }
