--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -5,17 +5,33 @@
 
 .link-to-app {
     font-family: 'Acme', sans-serif;
+    text-align: center;
+    position: absolute;
+    font-size: 3vh;
+    top: 57%;
+    left: 43%;
+    color: white;
 }
 /* 
 body {
     width: 100%;
 } */
 
+.description {
+    color: white;
+    font-family: 'Acme', sans-serif;
+    font-size: 4vh;
+    text-align: center;
+    position: absolute;
+    top: 42%;
+    left: 33%;
+}
+
 .img-container {
     background-image: url(../../img/tallyho-banner.jpeg); /* The image used - important! */
     background-size: cover;
     position: relative; /* Needed to position the cutout text in the middle of the image */
-    height: 35rem; /* Some height */
+    height: 61rem; /* Some height */
 }
 
 
@@ -29,7 +45,7 @@ body {
     width: 40%;
     text-align: center; /* Center text */
     position: absolute; /* Position text */
-    top: 50%; /* Position text in the middle */
+    top: 25%; /* Position text in the middle */
     left: 50%; /* Position text in the middle */
     transform: translate(-50%, -50%); /* Position text in the middle */
     mix-blend-mode: screen; /* This makes the cutout text possible */
