--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,3 +1,10 @@
+:root {
+    --blue-color: #80c3d2; 
+    --orange-color: #ff8454;
+    --green-color: #88c87b;
+    --teal-color: #f0cd3a;
+  }
+
 .login-form {
     background-color: #badfdb;
     margin-right: 2em;
@@ -47,7 +54,7 @@
 }
 
 .login-button:hover{
-    background-color:#fcf9ea;
+    background-color:white;
     color: #ff8a5c;
 }
 
