landing page is responsive on mobile, ipad, and desktop

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,37 +1,29 @@
-/* .landing-page {
-    margin-top: 2rem;
-    margin: 5rem 5rem;
-} */
+:root {
+    --blue-color: #80c3d2; 
+    --orange-color: #ff8454;
+    --green-color: #88c87b;
+    --teal-color: #f0cd3a;
+  }
 
-.link-to-app {
-    font-family: 'Acme', sans-serif;
-    text-align: center;
-    position: absolute;
-    font-size: 3vh;
-    top: 57%;
-    left: 43%;
-    color: white;
+.register-button, .login-button {
+    border: 0.1em solid var(--orange-color);
+    background-color: var(--orange-color);
 }
-/* 
-body {
-    width: 100%;
-} */
 
-.description {
-    color: white;
+
+.bottom-container {
+    display: flex;
+    flex-direction: column;
     font-family: 'Acme', sans-serif;
-    font-size: 4vh;
-    text-align: center;
-    position: absolute;
-    top: 42%;
-    left: 33%;
+    padding-top: 19rem;
+    color: white;
 }
 
 .img-container {
     background-image: url(../../img/tallyho-banner.jpeg); /* The image used - important! */
     background-size: cover;
     position: relative; /* Needed to position the cutout text in the middle of the image */
-    height: 61rem; /* Some height */
+    height: 64rem; /* Some height */
 }
 
 
@@ -45,8 +37,38 @@ body {
     width: 40%;
     text-align: center; /* Center text */
     position: absolute; /* Position text */
-    top: 25%; /* Position text in the middle */
+    top: 18%; /* Position text in the middle */
     left: 50%; /* Position text in the middle */
     transform: translate(-50%, -50%); /* Position text in the middle */
     mix-blend-mode: screen; /* This makes the cutout text possible */
+}
+
+@media screen and (min-width: 700px) {
+
+    .banner-title {
+        top: 26%;
+    }
+
+    .bottom-container {
+        padding-top: 27rem;
+        font-size: 3vh;
+    }
+  }
+
+
+@media screen and (min-width: 992px) {
+    
+.bottom-container {
+    padding-top: 40rem;
+    font-size: 3vh;
+}
+
+.img-container {
+    height: 86rem; /* Some height */
+}
+
+
+.banner-title {
+    top: 25%; /* Position text in the middle */
+}
 }
