--- a/src/routes/SideNavPage/SideNavPage.css
+++ b/src/routes/SideNavPage/SideNavPage.css
@@ -1,3 +1,10 @@
+:root {
+    --blue-color: #80c3d2; 
+    --orange-color: #ff8454;
+    --green-color: #88c87b;
+    --yellow-color: #f0cd3a;
+  }
+
 .side-page-nav {
     position: fixed;
     top: 6rem;
@@ -19,20 +26,20 @@
     display:inline-block;
     padding:0.3em 1.2em;
     margin:0 0.3em 0.3em 0;
-    border: 0.1em solid #0f4c75;
+    border: 0.1em solid var(--green-color);
     border-radius:1em;
     box-sizing: border-box;
     text-decoration:none;
     font-weight:300;
-    color:#fcf9ea;
-    background-color:#0f4c75;
+    color: white;
+    background-color: var(--green-color);
     text-align:center;
     transition: all 0.2s;
 }
 
 .side-button:hover{
-    background-color:#fcf9ea;
-    color: #ff8a5c;
+    background-color: white;
+    color: var(--green-color);
     border: 0.1em solid
 }
 
