--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -2,7 +2,7 @@
     --blue-color: #80c3d2; 
     --orange-color: #ff8454;
     --green-color: #88c87b;
-    --teal-color: #f0cd3a;
+    --yellow-color: #f0cd3a;
   }
 
 .register-button, .login-button {
